# coffee-with-llm

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ask_llm/: __init__.py  exceptions.py  llm.py
ask_llm/providers/: __init__.py
ask_llm/providers/anthropic/: __init__.py  messages_client.py
ask_llm/providers/google/: text_client.py
ask_llm/providers/google/utils/: __init__.py  citations.py
ask_llm/providers/openai/: responses_client.py
coffee/: __init__.py  cost.py  rate_limit.py  types.py
coffee/providers/: __init__.py  protocol.py  registry.py
coffee/providers/google/: __init__.py  text_client.py
coffee_with_llm/: __init__.py  config.py  exceptions.py  llm.py  rate_limit.py  types.py
coffee_with_llm/providers/: __init__.py  _reasoning.py  protocol.py  registry.py  tool_utils.py
coffee_with_llm/providers/anthropic/: messages_client.py
coffee_with_llm/providers/google/: text_client.py
coffee_with_llm/providers/openai/: __init__.py  responses_client.py
tests/: README.md  __init__.py  conftest.py  test_citations.py  test_config.py  test_cost.py  test_exceptions.py  test_llm.py  test_providers_anthropic.py  test_providers_google.py  test_providers_openai.py  test_rate_limit.py  test_reasoning_effort.py  test_registry.py  test_stream_retry.py  test_tool_utils.py
