[project]
name = "coffee_with_llm"
version = "0.1.0"
description = "Model-agnostic LLM library with unified API for OpenAI, Anthropic Claude, and Google Gemini"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Paveen Rajai" }
]
license = { text = "MIT" }
keywords = ["llm", "openai", "anthropic", "claude", "gemini", "ai", "language-model", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.84.0",
    "openai>=1.52.0",
    "google-genai>=0.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=24.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/paveenrajai/coffee"
Documentation = "https://github.com/paveenrajai/coffee#readme"
Repository = "https://github.com/paveenrajai/coffee"
Issues = "https://github.com/paveenrajai/coffee/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["coffee_with_llm*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "google.genai.*", "google.generativeai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["coffee_with_llm.providers.anthropic.*", "coffee_with_llm.providers.google.*", "coffee_with_llm.providers.openai.*"]
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
